force-app/main/default/objects/Property_hz__c/Property_hz__c.object-meta.xml
<CustomObject>
    <label>Property</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>