force-app/main/default/objects/Property_hz__c/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <formula>Address_hz__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>