force-app/main/default/objects/Property_hz__c/fields/Address_hz__c.field-meta.xml
<CustomField>
    <fullName>Address_hz__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>