force-app/main/default/objects/Property_hz__c/fields/Advised_LL__c.field-meta.xml
<CustomField>
    <fullName>Advised_LL__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when you&apos;ve advised landlord gas cert is due for renewal</inlineHelpText>
    <label>Advised LL</label>
    <type>Checkbox</type>
</CustomField>