force-app/main/default/objects/Property_hz__c/fields/Apartment_Number_and_Name__c.field-meta.xml
<CustomField>
    <fullName>Apartment_Number_and_Name__c</fullName>
    <label>Apartment Number and Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>