force-app/main/default/objects/Property_hz__c/fields/Bathrooms_US__c.field-meta.xml
<CustomField>
    <fullName>Bathrooms_US__c</fullName>
    <label>Bathrooms US</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>