force-app/main/default/objects/Property_hz__c/fields/City_Dubizzle__c.field-meta.xml
<CustomField>
    <fullName>City_Dubizzle__c</fullName>
    <label>City - Dubizzle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>Cairo</fullName>
            </value>
            <value>
                <fullName>Alexandria</fullName>
            </value>
            <value>
                <fullName>Jeddah</fullName>
            </value>
            <value>
                <fullName>Riyadh</fullName>
            </value>
            <value>
                <fullName>Ras al Khaimeh</fullName>
            </value>
            <value>
                <fullName>Sharjah</fullName>
            </value>
            <value>
                <fullName>Fujeirah</fullName>
            </value>
            <value>
                <fullName>Ajman</fullName>
            </value>
            <value>
                <fullName>Umm al Quwain</fullName>
            </value>
            <value>
                <fullName>Dammam and Khobar</fullName>
            </value>
            <value>
                <fullName>Kuwait City</fullName>
            </value>
            <value>
                <fullName>Doha</fullName>
            </value>
            <value>
                <fullName>Manama</fullName>
            </value>
            <value>
                <fullName>Muscat</fullName>
            </value>
            <value>
                <fullName>Damascus</fullName>
            </value>
            <value>
                <fullName>Amman</fullName>
            </value>
            <value>
                <fullName>Beirut</fullName>
            </value>
            <value>
                <fullName>Algiers</fullName>
            </value>
            <value>
                <fullName>Tripoli</fullName>
            </value>
            <value>
                <fullName>Tunis</fullName>
            </value>
            <value>
                <fullName>Casablanca</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>