force-app/main/default/objects/Property_hz__c/fields/City_Propertyfinder__c.field-meta.xml
<CustomField>
    <fullName>City_Propertyfinder__c</fullName>
    <label>City - Propertyfinder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>