force-app/main/default/objects/Property_hz__c/fields/CompletionDate_hz__c.field-meta.xml
<CustomField>
    <fullName>CompletionDate_hz__c</fullName>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>