force-app/main/default/objects/Property_hz__c/fields/CompletionStatus__c.field-meta.xml
<CustomField>
    <fullName>CompletionStatus__c</fullName>
    <description>current completion status of the item, can e.g. determine the availability for reservation or sales</description>
    <label>Completion Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>To Be Announced</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>