force-app/main/default/objects/Property_hz__c/fields/CompletionStatus_hz__c.field-meta.xml
<CustomField>
    <fullName>CompletionStatus_hz__c</fullName>
    <label>Completion Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>To Be Announced</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>