force-app/main/default/objects/Property_hz__c/fields/Country_hz__c.field-meta.xml
<CustomField>
    <fullName>Country_hz__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>