force-app/main/default/objects/Property_hz__c/fields/CountryCode_hz__c.field-meta.xml
<CustomField>
    <fullName>CountryCode_hz__c</fullName>
    <label>Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>