force-app/main/default/objects/Property_hz__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Developer Properties</relationshipLabel>
    <relationshipName>PropertiesDeveloper</relationshipName>
    <type>Lookup</type>
</CustomField>