force-app/main/default/objects/Property_hz__c/fields/EICR_Expiry__c.field-meta.xml
<CustomField>
    <fullName>EICR_Expiry__c</fullName>
    <label>EICR Expiry</label>
    <type>Date</type>
</CustomField>