force-app/main/default/objects/Property_hz__c/fields/EPC_Address__c.field-meta.xml
<CustomField>
    <fullName>EPC_Address__c</fullName>
    <label>EPC Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>