force-app/main/default/objects/Property_hz__c/fields/EPC_Energy_Efficiency_potential__c.field-meta.xml
<CustomField>
    <fullName>EPC_Energy_Efficiency_potential__c</fullName>
    <label>EPC - Energy Efficiency (potential)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>