force-app/main/default/objects/Property_hz__c/fields/EPC_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>EPC_Expiry_Date__c</fullName>
    <inlineHelpText>date when current EPC rating is expiring</inlineHelpText>
    <label>EPC Expiry Date</label>
    <type>Date</type>
</CustomField>