force-app/main/default/objects/Property_hz__c/fields/EPC_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>EPC_Sync_Status__c</fullName>
    <label>EPC Sync Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>