force-app/main/default/objects/Property_hz__c/fields/External_Property_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Property_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Property ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>