force-app/main/default/objects/Property_hz__c/fields/Floor_houzon__c.field-meta.xml
<CustomField>
    <fullName>Floor_houzon__c</fullName>
    <label>Floor Houzon</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>