force-app/main/default/objects/Property_hz__c/fields/Gas_Cert_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Gas_Cert_Expiry__c</fullName>
    <label>Gas Cert Expiry</label>
    <type>Date</type>
</CustomField>