force-app/main/default/objects/Property_hz__c/fields/HalfBathrooms_hz__c.field-meta.xml
<CustomField>
    <fullName>HalfBathrooms_hz__c</fullName>
    <label>Half Bathrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>