force-app/main/default/objects/Property_hz__c/fields/Has_LL_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Has_LL_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>goes this landlord have a maintenance agreement?</inlineHelpText>
    <label>Has Landlord Service Agreement?</label>
    <type>Checkbox</type>
</CustomField>