force-app/main/default/objects/Property_hz__c/fields/Latitude_hz__c.field-meta.xml
<CustomField>
    <fullName>Latitude_hz__c</fullName>
    <label>Latitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>