force-app/main/default/objects/Property_hz__c/fields/Lmk_Key__c.field-meta.xml
<CustomField>
    <fullName>Lmk_Key__c</fullName>
    <label>Lmk Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>