force-app/main/default/objects/Property_hz__c/fields/Longitude_hz__c.field-meta.xml
<CustomField>
    <fullName>Longitude_hz__c</fullName>
    <label>Longitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>