force-app/main/default/objects/Property_hz__c/fields/LotSize_hz__c.field-meta.xml
<CustomField>
    <fullName>LotSize_hz__c</fullName>
    <label>Lot Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>