force-app/main/default/objects/Property_hz__c/fields/Main_Website_Image__c.field-meta.xml
<CustomField>
    <fullName>Main_Website_Image__c</fullName>
    <label>Main Website Image</label>
    <type>Url</type>
</CustomField>