force-app/main/default/objects/Property_hz__c/fields/Master_Property__c.field-meta.xml
<CustomField>
    <fullName>Master_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Property</label>
    <referenceTo>Property_hz__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>