force-app/main/default/objects/Property_hz__c/fields/Name_No__c.field-meta.xml
<CustomField>
    <fullName>Name_No__c</fullName>
    <description>this field is used to generate EPC</description>
    <label>Name / No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>