force-app/main/default/objects/Property_hz__c/fields/NumberOfParkingSpaces_hz__c.field-meta.xml
<CustomField>
    <fullName>NumberOfParkingSpaces_hz__c</fullName>
    <label>Parking Spaces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>