force-app/main/default/objects/Property_hz__c/fields/Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>Parent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project</label>
    <referenceTo>Property_hz__c</referenceTo>
    <relationshipLabel>Buildings in this Project</relationshipLabel>
    <relationshipName>Building_Project</relationshipName>
    <type>Lookup</type>
</CustomField>