force-app/main/default/objects/Property_hz__c/fields/Parking_Spaces__c.field-meta.xml
<CustomField>
    <fullName>Parking_Spaces__c</fullName>
    <label>Parking Spaces</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>