force-app/main/default/objects/Property_hz__c/fields/PostalCode_hz__c.field-meta.xml
<CustomField>
    <fullName>PostalCode_hz__c</fullName>
    <label>Zip/Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>