force-app/main/default/objects/Property_hz__c/fields/Price_on_Request__c.field-meta.xml
<CustomField>
    <fullName>Price_on_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price on Request</label>
    <type>Checkbox</type>
</CustomField>