force-app/main/default/objects/Property_hz__c/fields/Private_Amenities__c.field-meta.xml
<CustomField>
    <fullName>Private_Amenities__c</fullName>
    <label>Private Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Maids Room</fullName>
            </value>
            <value>
                <fullName>Study</fullName>
            </value>
            <value>
                <fullName>Central A/C &amp; Heating</fullName>
            </value>
            <value>
                <fullName>Balcony</fullName>
            </value>
            <value>
                <fullName>Private Garden</fullName>
            </value>
            <value>
                <fullName>Private Pool</fullName>
            </value>
            <value>
                <fullName>Private Gym</fullName>
            </value>
            <value>
                <fullName>Private Jacuzzi</fullName>
            </value>
            <value>
                <fullName>Shared Pool</fullName>
            </value>
            <value>
                <fullName>Shared Spa</fullName>
            </value>
            <value>
                <fullName>Shared Gym</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Concierge Service</fullName>
            </value>
            <value>
                <fullName>Maid Service</fullName>
            </value>
            <value>
                <fullName>Covered Parking</fullName>
            </value>
            <value>
                <fullName>Built in Wardrobes</fullName>
            </value>
            <value>
                <fullName>Walk in Closet</fullName>
            </value>
            <value>
                <fullName>Built in Kitchen Appliances</fullName>
            </value>
            <value>
                <fullName>View of Water</fullName>
            </value>
            <value>
                <fullName>View of Landmark</fullName>
            </value>
            <value>
                <fullName>Pets Allowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>