force-app/main/default/objects/Property_hz__c/fields/Property_Key_Tag__c.field-meta.xml
<CustomField>
    <fullName>Property_Key_Tag__c</fullName>
    <label>Property Key Tag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>