force-app/main/default/objects/Property_hz__c/fields/Propertyfinder_Region__c.field-meta.xml
<CustomField>
    <fullName>Propertyfinder_Region__c</fullName>
    <label>Propertyfinder_Region</label>
    <type>TextArea</type>
</CustomField>