force-app/main/default/objects/Property_hz__c/fields/PropertyOwnerContact__c.field-meta.xml
<CustomField>
    <fullName>PropertyOwnerContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Owned Properties</relationshipLabel>
    <relationshipName>PropertyOwnerContact</relationshipName>
    <type>Lookup</type>
</CustomField>