force-app/main/default/objects/Property_hz__c/fields/PropertyOwnerContact_hz__c.field-meta.xml
<CustomField>
    <fullName>PropertyOwnerContact_hz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>