force-app/main/default/objects/Property_hz__c/fields/Service_Agreement_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Agreement_Provider__c</fullName>
    <label>Service Agreement Provider</label>
    <type>TextArea</type>
</CustomField>