force-app/main/default/objects/Property_hz__c/fields/Service_Agreement_Reference__c.field-meta.xml
<CustomField>
    <fullName>Service_Agreement_Reference__c</fullName>
    <label>Service Agreement Reference</label>
    <type>TextArea</type>
</CustomField>