force-app/main/default/objects/Property_hz__c/fields/Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge__c</fullName>
    <label>Service Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>