force-app/main/default/objects/Property_hz__c/fields/State_hz__c.field-meta.xml
<CustomField>
    <fullName>State_hz__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>