force-app/main/default/objects/Property_hz__c/fields/StateCode_hz__c.field-meta.xml
<CustomField>
    <fullName>StateCode_hz__c</fullName>
    <label>State Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>