force-app/main/default/objects/Property_hz__c/fields/Street_hz__c.field-meta.xml
<CustomField>
    <fullName>Street_hz__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>