force-app/main/default/objects/Property_hz__c/fields/Sub_Community_Propertyfinder__c.field-meta.xml
<CustomField>
    <fullName>Sub_Community_Propertyfinder__c</fullName>
    <label>Sub Community - Propertyfinder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>