force-app/main/default/objects/Property_hz__c/fields/SystemWebsiteExternalId__c.field-meta.xml
<CustomField>
    <fullName>SystemWebsiteExternalId__c</fullName>
    <externalId>true</externalId>
    <label>System Website External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>