force-app/main/default/objects/Property_hz__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <label>View</label>
    <length>154</length>
    <type>Text</type>
</CustomField>