force-app/main/default/objects/Property_hz__c/fields/Year_Build_text__c.field-meta.xml
<CustomField>
    <fullName>Year_Build_text__c</fullName>
    <formula>Text( YearBuilt_hz__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Build Year</label>
    <type>Text</type>
</CustomField>