force-app/main/default/objects/Property_hz__c/fields/Year_Built_Text__c.field-meta.xml
<CustomField>
    <fullName>Year_Built_Text__c</fullName>
    <label>Year Built</label>
    <length>4</length>
    <type>Text</type>
</CustomField>