force-app/main/default/objects/Property_hz__c/fields/YearBuilt_hz__c.field-meta.xml
<CustomField>
    <fullName>YearBuilt_hz__c</fullName>
    <label>Year Built</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>