force-app/main/default/objects/Property_hz__c/recordTypes/Building.recordType-meta.xml
<RecordType>
    <fullName>Building</fullName>
    <active>true</active>
    <label>Building</label>
</RecordType>