force-app/main/default/objects/Property_hz__c/listViews/All_Buildings.listView-meta.xml
<ListView>
    <fullName>All_Buildings</fullName>
    <columns>NAME</columns>
    <columns>Address_hz__c</columns>
    <columns>TotalArea_hz__c</columns>
    <columns>Year_Build_text__c</columns>
    <columns>PropertyOwnerContact__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Property_hz__c.Building</value>
    </filters>
    <label>All Master Properties (Buildings)</label>
</ListView>