force-app/main/default/objects/Property_hz__c/listViews/All_Properties.listView-meta.xml
<ListView>
    <fullName>All_Properties</fullName>
    <columns>NAME</columns>
    <columns>Address_hz__c</columns>
    <columns>Bedrooms_hz__c</columns>
    <columns>FullBathrooms_hz__c</columns>
    <columns>TotalArea_hz__c</columns>
    <columns>Year_Build_text__c</columns>
    <columns>PropertyOwnerContact__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Properties</label>
</ListView>