force-app/main/default/objects/Property_hz__c/listViews/All_Units.listView-meta.xml
<ListView>
    <fullName>All_Units</fullName>
    <columns>NAME</columns>
    <columns>Address_hz__c</columns>
    <columns>Bedrooms_hz__c</columns>
    <columns>FullBathrooms_hz__c</columns>
    <columns>TotalArea_hz__c</columns>
    <columns>Year_Build_text__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Master_Property__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Units</label>
</ListView>