force-app/main/default/objects/Property_hz__c/listViews/Buildings.listView-meta.xml
<ListView>
    <fullName>Buildings</fullName>
    <columns>NAME</columns>
    <columns>Address2__c</columns>
    <columns>City_hz__c</columns>
    <columns>Year_Build_text__c</columns>
    <columns>PropertyType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Property_hz__c.Building</value>
    </filters>
    <label>Buildings</label>
</ListView>